--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
     <meta name="theme-color" content="#00467A" />
     <meta name="author" content="Tornike.despotashvili@gmail.com">
     <meta property="og:type" content="website">
-    <meta name="description" content="Web site created using create-react-app"
-    />
+    <meta name="description" content="საქართველოს ონკოლოგიის სკოლა, საქართველოს გერიატრიული ონკოლოგიის საზოგადოება">
+    <meta name="description" content="საქართველოს ონკოლოგიის სკოლა, საქართველოს გერიატრიული ონკოლოგიის საზოგადოება"/>
+    <meta property="og:title" content="საქართველოს ონკოლოგიის სკოლა, საქართველოს გერიატრიული ონკოლოგიის საზოგადოება">
+    <meta property="og:image" content="https://gso-gsgo.ge/gso-gsgo-cover.jpeg">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
