--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#00467A" />
     <meta name="author" content="Tornike.despotashvili@gmail.com">
     <meta property="og:type" content="website">
+    <meta name="keywords" content="Cancer, კიბო, kibo, Georgia,cancer in Georgia, კიბო საქართველოში, kibo saqartveloshi, young oncologists of georgia, ახალგაზრდა ონკოლგისტები, ონკოლოგია, ნოკკოლოგისტი, onkologia, onkologisti, geriatric oncology georgia">
     <meta name="description" content="საქართველოს ონკოლოგიის სკოლა, საქართველოს გერიატრიული ონკოლოგიის საზოგადოება">
     <meta name="description" content="საქართველოს ონკოლოგიის სკოლა, საქართველოს გერიატრიული ონკოლოგიის საზოგადოება"/>
     <meta property="og:title" content="საქართველოს ონკოლოგიის სკოლა, საქართველოს გერიატრიული ონკოლოგიის საზოგადოება">
