--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,15 @@
     <meta name="theme-color" content="#00467A" />
     <meta name="author" content="Tornike.despotashvili@gmail.com">
     <meta property="og:type" content="website">
-    <meta name="keywords" content="Cancer, კიბო, kibo, Georgia,cancer in Georgia, კიბო საქართველოში, kibo saqartveloshi, young oncologists of georgia, ახალგაზრდა ონკოლგისტები, ონკოლოგია, ნოკკოლოგისტი, onkologia, onkologisti, geriatric oncology georgia">
+    <meta name="news_keywords" content="Cancer, კიბო, kibo, Georgia,cancer in Georgia, კიბო საქართველოში, kibo saqartveloshi, young oncologists of georgia, ახალგაზრდა ონკოლგისტები, ონკოლოგია, ნოკკოლოგისტი, onkologia, onkologisti, geriatric oncology georgia, Gso, gsgo, საქაეთვრლოს ონკოლოგიის სკოლა,საქართველოს გერიატრიული ონკოლოგიის საზოგადოება">
+    <meta name="keywords" content="Cancer, კიბო, kibo, Georgia,cancer in Georgia, კიბო საქართველოში, kibo saqartveloshi, young oncologists of georgia, ახალგაზრდა ონკოლგისტები, ონკოლოგია, ნოკკოლოგისტი, onkologia, onkologisti, geriatric oncology georgia, Gso, gsgo, საქაეთვრლოს ონკოლოგიის სკოლა,საქართველოს გერიატრიული ონკოლოგიის საზოგადოება">
     <meta name="description" content="საქართველოს ონკოლოგიის სკოლა, საქართველოს გერიატრიული ონკოლოგიის საზოგადოება">
     <meta name="description" content="საქართველოს ონკოლოგიის სკოლა, საქართველოს გერიატრიული ონკოლოგიის საზოგადოება"/>
     <meta property="og:title" content="საქართველოს ონკოლოგიის სკოლა, საქართველოს გერიატრიული ონკოლოგიის საზოგადოება">
     <meta property="og:image" content="https://gso-gsgo.ge/gso-gsgo-cover.jpeg">
+    <meta name='url' content='https://gso-gsgo.ge/'>
+    <meta name='og:url' content='https://gso-gsgo.ge/'>
+    <meta name='date' content='August 24, 2023'>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
